feat: 完善一些接口bug，调整文档
